...
                                <rect key="frame" x="40" y="188" width="213" height="28.5"/>
                                <attributedString key="attributedText">
                                    <fragment content="Create your Account">
                                        <attributes>
                                            <font key="NSFont" size="24" name="HelveticaNeue-Light"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WqQ-cK-SeN">
                                <rect key="frame" x="40" y="256.5" width="334" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="HostRegistration.UsernameTextField"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-Mail" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YwL-S3-mlk">
                                <rect key="frame" x="40" y="315.5" width="334" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="HostRegistration.EmailTextField"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qbh-9g-OFn">
                                <rect key="frame" x="40" y="374.5" width="334" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="HostRegistration.PasswordTextField"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2p6-9g-X2f">
                                <rect key="frame" x="40" y="433.5" width="334" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="HostRegistration.ConfirmTextField"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES" textContentType="password"/>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Create Account">
                                            <attributes>
                                                <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TJa-gP-sPD">
                                <rect key="frame" x="40" y="256" width="334" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="HostSignIn.UsernameTextField"/>
                                <color key="textColor" name="customTextColor"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fqv-ne-53O">
                                <rect key="frame" x="40" y="320" width="334" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="HostSignIn.PasswordTextField"/>
                                <color key="textColor" name="customTextColor"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Sign in">
                                            <attributes>
                                                <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
