...
                    }
                case let .failure(error):
                    DispatchQueue.main.async {
                        let alertController = UIAlertController(title: "LogIn Error",
                                                                message: "There was an error signing in with message: \(error). Please verify and try again.",
                            preferredStyle: .alert)
                        let alertAction = UIAlertAction(title: "OK", style: .default, handler: nil)
                        alertController.addAction(alertAction)
                        self.present(alertController, animated: true)
                    }
                    return
                }
            }
...
    }

    func setupButtons() {
        signInButton.colorTheme()
        guestButton.colorTheme()

        let registerButtonTitle = NSMutableAttributedString(string: "Register", attributes: [
            NSAttributedString.Key.font: UIFont(name: "Helvetica Neue", size: 18)!,
            NSAttributedString.Key.foregroundColor: UIColor(named: "customTextColor")!
        ])
        registerButton.setAttributedTitle(registerButtonTitle, for: .normal)

        let forgotPasswordButtonTitle = NSMutableAttributedString(string: "Forgot Password", attributes: [
...
